<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:text="@string/result"
        android:gravity="center"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <Spinner
        android:id="@+id/s_countries"
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:entries="@array/countries"
        android:prompt="@string/country_prompt"
        app:layout_constraintEnd_toStartOf="@+id/et_user_input"
        app:layout_constraintTop_toBottomOf="@+id/tv_result" />

    <Spinner
        android:id="@+id/s_measurement_units"
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:entries="@array/units"
        android:prompt="@string/unit_prompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_countries" />

    <EditText
        android:id="@+id/et_user_input"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="80dp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result" />

    <TextView
        android:id="@+id/tv_input_description"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:text="@string/input_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_input" />

    <Button
        android:id="@+id/b_show"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="84dp"
        android:text="@string/convert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_input_description" />

</android.support.constraint.ConstraintLayout>